# clarity-reader

./: .env  .gitignore  README.md  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/pkg/: embed.py  helpers.py  main.py  modal_setup.py
src/: OverlappingCards.tsx  getSummary.ts
src/pages/: _app.tsx  index.tsx
src/pages/api/: get-content.ts
src/pages/read/: [...url].tsx
src/styles/: globals.css
